# epilect

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
demo/: run_demo.py  sdse_demo.bam.bai  sdse_ref.fna  sdse_ref.fna.fai
epilect/: __init__.py  cli.py  core.py
tests/: test_core.py
